# Deformation

AMIPS/src/: AMIPS.md  main.cpp  mips.cpp  mips.h
ARAP/: CMakeLists.txt  实验报告.md
ARAP/src/: ARAP.cpp  ARAP.h  fix_indices.py  main.cpp  readcsv.cpp
Anderson-MIPS/: CMakeLists.txt
Anderson-MIPS/src/: main.cpp  mips.cpp  mips.h  readcsv.h
LaplacianDeformation/: CMakeLists.txt
LaplacianDeformation/src/: LPLC.cpp  LPLC.h  main.cpp  p.csv  readcsv.h
MIPS/: CMakeLists.txt
MIPS/src/: control_points.csv  mips.cpp  mips.h
MIPS_BCD/: CMakeLists.txt  CMakePresets.json
MIPS_BCD/src/: CMakeLists.txt  main.cpp  mips.cpp  mips.h  readcsv.cpp
RBF/: CMakeLists.txt
RBF/py/: point.csv  test.ipynb  test.py
RBF/src/: RBF.cpp  RBF.h  main.cpp  mesh_io.h  p.csv  readcsv.cpp  util.h
SubspaceGradientDomainDeformation/: CMakeLists.txt
SubspaceGradientDomainDeformation/src/: LPLC.cpp  LPLC.h  linear-lplc.cpp  linear-lplc.h  main.cpp  mesh_io.cpp  p.csv  submesh.cpp  submesh.h  util.cpp  util.h
